--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "settings": {
         "theme": "dark",
-        "start_time": "08:00:00",
+        "start_time": "09:00:00",
         "end_time": "22:00:00",
         "notification_frequency": 1800.0,
         "meal_windows": {
@@ -14,7 +14,7 @@
                 "14:00:00"
             ],
             "Dinner": [
-                "18:00:00",
+                "19:00:00",
                 "20:00:00"
             ]
         },
@@ -23,6 +23,11 @@
             "long": 30.0
         },
         "history_duration": 7.0,
-        "holiday_ranges": []
+        "holiday_ranges": [
+            [
+                "2025-12-13",
+                "2025-12-14"
+            ]
+        ]
     }
 }
