--- a/settings.json
+++ b/settings.json
@@ -1,32 +1,27 @@
 {
     "settings": {
         "theme": "dark",
-        "start_time": "06:00:00",
+        "start_time": "07:00:00",
         "end_time": "22:00:00",
         "weekend_start": "09:00:00",
         "weekend_end": "23:00:00",
         "notification_frequency": 30.0,
         "meal_windows": {
             "breakfast": [
-                "07:30:00",
-                "10:00:00"
+                "07:00:00",
+                "09:00:00"
             ],
             "lunch": [
                 "12:00:00",
                 "14:00:00"
             ],
             "dinner": [
-                "19:00:00",
+                "18:00:00",
                 "20:00:00"
             ]
         },
         "break_duration": 30.0,
         "history_duration": 7.0,
-        "holiday_ranges": [
-            [
-                "2025-12-13",
-                "2025-12-14"
-            ]
-        ]
+        "holiday_ranges": []
     }
 }
